# mate-rov-2026-information-sheet-problem

./: .gitignore  Justfile  README.md  pixi.toml  pyproject.toml
src/information_sheet_problem/: OpenCV.py  README.md  __init__.py  domain_data_classes.py  logic.py  non.txt
tests/: test_build.py  test_examples.py  test_runtime_input.py
